--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: sans-serif;
+    font-size: 20px;
+}
+
 header {
     text-align: center;
     font-size: 20px;
@@ -5,7 +10,7 @@ header {
 .underscores {
     text-align: center;
     font-size: 80px;
-    letter-spacing: 2px;
+    letter-spacing: 15px;
 }
 
 .correct, .wrong {
@@ -22,4 +27,22 @@ header {
 .wrong {
     background: rgb(248, 128, 128);
     float: right;
+}
+
+input[type="button"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #bada55;
+    color: green;
+    font-weight: 900;
+    padding: 15px;
+    border: none;
+    background-image: radial-gradient(circle at 50% 50%, #bada55 10%, whitesmoke 100%);
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 0 10px -1px rgba(0, 0, 0, 0.233);
+}
+input[type="button"]:hover {
+    box-shadow: 0 0 10px black;
 }
